--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 	
 <div id="content" class="w3-container">
-	<p>Are you feeling like you might have a cold but wonder if it is allergies. Answer a few short questions to find out!</p>
-	
+	<p>Are you feeling like you might have a cold but wonder if it is allergies? Answer a few short questions to find out!</p>
+	<--! corrected grammar -->
 	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a>
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
@@ -95,9 +95,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<h1>Question 1</h1>
 	</div>
 	
-    	<div id="content" class="w3-container">
-        <p>Put Question 1 content here.</p>    
-    	</div>
+	<div id="content" class="w3-container">
+		<p>Are your eyes watery or itchy?</p>
+		<a href="#two”  onclick="allergyAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
+	 </div><!-- added first question and the buttons for it -->
+
 </div>
 
 <div class="page" id="two">
@@ -106,9 +109,36 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>Content of page 2 goes here.</p>
-	</div>
+		<p>Do you have a fever?</p>
+		<a href="#three”  onclick="coldAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
+	</div> <!-- added second page, second question and the buttons for it -->
 </div>	
+
+<div class="page" id="three">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 3</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p>Do you have a sore throat?</p>
+		<a href="#four”  onclick="coldAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
+	</div> <!-- added third page, third question and the buttons for it -->
+</div>	
+	
+<div class="page" id="four">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 4</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p>Are your symptoms seasonal or chronic?</p>
+		<a href="#two”  onclick="allergyAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
+	</div> <!-- added fourth page, fourth question and the buttons for it -->
+</div>	
+
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
