--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your eyes watery or itchy?</p>
-		<a href="#two”  onclick="allergyAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#two”  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	 </div><!-- added first question and the buttons for it -->
 
@@ -109,7 +109,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
-		<a href="#three”  onclick="coldAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#three”  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added second page, second question and the buttons for it -->
 </div>	
@@ -121,7 +121,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>
-		<a href="#four”  onclick="coldAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#four”  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added third page, third question and the buttons for it -->
 </div>	
@@ -133,7 +133,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seasonal or chronic?</p>
-		<a href="#two”  onclick="allergyAdd();” class="w3-btn w3-black"> Yes</a>
+		<a href="#two”  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added fourth page, fourth question and the buttons for it -->
 </div>	
