--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
         function allergyAdd(){
             allergy_count = allergy_count + 1;
-
+		alert (allergy_count);
         }
 
         function coldAdd(){
             cold_count = cold_count + 1;
+		alert (cold_count);
         }
 
   </script>
@@ -82,7 +83,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 <div id="content" class="w3-container">
 	<p>Are you feeling like you might have a cold but wonder if it is allergies? Answer a few short questions to find out!</p>
-	/* corrected grammar */
+	<!--  corrected grammar -->
 	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a>
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
@@ -97,6 +98,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Are your eyes watery or itchy?</p>
 		<a href="#two”  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+									       <p> </p>		   
 		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	 </div><!-- added first question and the buttons for it -->
 
@@ -110,6 +112,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
 		<a href="#three”  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
+		</div>
 		<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added second page, second question and the buttons for it -->
 </div>	
