--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		alert (cold_count);
         }
 
+	function getResults() {
+		allergyPercent = allergy_count/4;
+		coldPercent = cold_count/4;
+		var resultText = document.getElementById("results");
+		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
+	}
   </script>
 
 
@@ -136,11 +142,20 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seasonal or chronic?</p>
-		<a href="#two”  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
-		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
+		<a href="#five”  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+		<a href="#five"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added fourth page, fourth question and the buttons for it -->
 </div>	
-
+	
+	<div class="page" id="five">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Click below for results</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+		<a href="#results”  onclick="getResults();" class="w3-btn w3-black"> Results</a>
+	</div> <!-- added a page that takes you to the results -->
+</div>	
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
