--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
+		</div>
 		<a href="#three" onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
 		
 		<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
@@ -132,6 +133,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>
+		</div>
 		<a href="#four"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added third page, third question and the buttons for it -->
@@ -144,6 +146,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seasonal or chronic?</p>
+		</div>
 		<a href="#five"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#five"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added fourth page, fourth question and the buttons for it -->
