fixed the <div and results

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>
-		</div>
+		
 		<a href="#four"  onclick="coldAdd(); class="w3-btn w3-black"> Yes</a>
 		<a href="#four"  onclick="allergyAdd(); class="w3-btn w3-black">No</a>
 	</div> <!-- added third page, third question and the buttons for it -->
@@ -145,7 +145,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seasonal or chronic?</p>
-		</div>
+		
 		<a href="#five"  onclick="allergyAdd(); class="w3-btn w3-black"> Yes</a>
 		<a href="#five"  onclick="coldAdd(); class="w3-btn w3-black">No</a>
 	</div> <!-- added fourth page, fourth question and the buttons for it -->
@@ -154,10 +154,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div class="page" id="five">
 	<div class="w3-container w3-flat-carrot">
 		<h1>Click below for results</h1>
-	</div>
+		</div>
 	
 	<div id="content" class="w3-container">
-		<a href="#results"  onclick="getResults(); class="w3-btn w3-black"> Results</a>
+		<a onclick="getResults(); class="w3-btn w3-black"> Results</a>
 	</div> <!-- added a page that takes you to the results -->
 </div>	
 
