--- a/index.html
+++ b/index.html
@@ -157,9 +157,13 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		</div>
 	
 	<div id="content" class="w3-container">
+		<p id="results"></p>
 		<a onclick="getResults(); class="w3-btn w3-black"> Results</a>
+		<p id="results"></p>
 	</div> <!-- added a page that takes you to the results -->
 </div>	
+			       </div>	
+			  
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
