--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p id="results"></p>
 		<a onclick="getResults(); class="w3-btn w3-black"> Results</a>
+		<a href="#results" onClick="results(); "class="w3-btn w3-black"> attempt </a>
 		<p id="results"></p>
 	</div> <!-- added a page that takes you to the results -->
 </div>	
