--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your eyes watery or itchy?</p>
-		<a href="#two"  onclick="allergyAdd(); class="w3-btn w3-black"> Yes</a>
+		<a href="#two"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
 									       	   
-		<a href="#two"  onclick="coldAdd(); class="w3-btn w3-black">No</a>
+		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	 </div><!-- added first question and the buttons for it -->
 
 </div>
@@ -119,9 +119,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
 		
-		<a href="#three" onclick="coldAdd(); class="w3-btn w3-black"> Yes</a>
+		<a href="#three" onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
 		
-		<a href="#three"  onclick="allergyAdd(); class="w3-btn w3-black">No</a>
+		<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added second page, second question and the buttons for it -->
 </div>	
 
@@ -133,8 +133,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>
 		
-		<a href="#four"  onclick="coldAdd(); class="w3-btn w3-black"> Yes</a>
-		<a href="#four"  onclick="allergyAdd(); class="w3-btn w3-black">No</a>
+		<a href="#four"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
+		<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added third page, third question and the buttons for it -->
 </div>	
 	
@@ -146,8 +146,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seasonal or chronic?</p>
 		
-		<a href="#five"  onclick="allergyAdd(); class="w3-btn w3-black"> Yes</a>
-		<a href="#five"  onclick="coldAdd(); class="w3-btn w3-black">No</a>
+		<a href="#five"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+		<a href="#five"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div> <!-- added fourth page, fourth question and the buttons for it -->
 </div>	
 	
@@ -158,8 +158,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p id="results"></p>
-		<a onclick="getResults(); class="w3-btn w3-black"> Results</a>
-		<a href="#results" onClick="results(); "class="w3-btn w3-black"> attempt </a>
+		<a onclick="getResults();" class="w3-btn w3-black"> Results</a>
+		<a href="#results" onClick="results();" "class="w3-btn w3-black"> attempt </a>
 		<p id="results"></p>
 	</div> <!-- added a page that takes you to the results -->
 </div>	
