--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
+Niels Levy-Thiebaut
  
 Further Information:
 http://cns.utexas.edu/fri
@@ -17,7 +17,7 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+To tell if user has a cold or allergies based on user responses.
  
 Known Issues:
 blah, blah, blah, blah
@@ -56,6 +56,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		
 		var resultText = document.getElementById("results");
 		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
+		<!-- results function spits out probability that it's an allergy or cold-->
 	}
   </script>
 
@@ -92,7 +93,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<p>Are you feeling like you might have a cold but wonder if it is allergies? Answer a few short questions to find out!</p>
 	<!--  corrected grammar -->
 	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a>
-	
+	<!-- button takes user to the first question -->
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
@@ -108,6 +109,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#two"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
 									       	   
 		<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
+		<!-- buttons take in user response and takes them to the next page -->
 	 </div><!-- added first question and the buttons for it -->
 
 </div>
@@ -123,6 +125,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#three" onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
 		
 		<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
+		<!-- buttons take in user response and takes them to the next page -->
 	</div> <!-- added second page, second question and the buttons for it -->
 </div>	
 
@@ -136,6 +139,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		
 		<a href="#four"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
+		<!-- buttons take in user response and takes them to the next page -->
 	</div> <!-- added third page, third question and the buttons for it -->
 </div>	
 	
@@ -149,6 +153,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		
 		<a href="#five"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
 		<a href="#five"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
+		<!-- buttons take in user response and takes them to the next page -->
 	</div> <!-- added fourth page, fourth question and the buttons for it -->
 </div>	
 	
@@ -160,7 +165,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p id="results"></p>
 		<a onclick="getResults();" class="w3-btn w3-black"> Results</a>
-		
+		<!-- button gives you the results -->
 		
 	</div> <!-- added a page that takes you to the results -->
 </div>	
